--- a/package.json
+++ b/package.json
@@ -8,7 +8,11 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
+    "bootstrap": "^4.5.2",
+    "bootstrap-vue": "^2.17.3",
     "core-js": "^3.6.5",
+    "firebase": "^7.23.0",
+    "sweetalert2": "^10.5.0",
     "vue": "^2.6.11",
     "vue-router": "^3.2.0"
   },
