--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "bootstrap": "^4.5.2",
     "bootstrap-vue": "^2.17.3",
     "core-js": "^3.6.5",
+    "emailjs-com": "^2.6.3",
     "firebase": "^7.23.0",
     "sweetalert2": "^10.5.0",
     "vue": "^2.6.12",
